# windows-ai-assistant

./: .coverage  .gitignore  .mypy.ini  CONVERSATIONAL_FIX_SUMMARY.md  CONVERSATIONAL_RESPONSES_IMPLEMENTATION_SUMMARY.md  DEBUG_ACTION_EXECUTION_REPORT.md  DUAL_EXECUTION_MODE_IMPLEMENTATION.md  FIX_ACTION_PARSING_THREADING_STEPS.md  GUI_WIDGETS_FIX_VERIFICATION.md  IMPLEMENTATION_NOTES_PERSISTENT_MEMORY.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_STREAMING.md  IMPLEMENTATION_VERIFICATION.md  PERSISTENT_MEMORY.md  README.md  REASONING_MODULE.md  REASONING_MODULE_FIX.md  RECURSION_BUG_FIX_SUMMARY.md  RESEARCH_PIPELINE_GUIDE.md  RESEARCH_PIPELINE_IMPLEMENTATION_SUMMARY.md  STREAMING_CHANGELOG.md  STREAMING_IMPLEMENTATION.md  VERIFICATION_RETRY_IMPLEMENTATION_SUMMARY.md  demo_conversational.py  process_log.txt  pyproject.toml  requirements-dev.txt  requirements.txt  test_conversational_response.py  test_execution_flow.py
examples/: sample_tool_doc.md  sandbox_verification_demo.py
src/jarvis/: __init__.py  __main__.py  action_executor.py  action_fallback_strategies.py  adaptive_fixing.py  app.py  chat.py  cli.py  code_cleaner.py  code_step_breakdown.py  config.py  container.py  conversation_backend.py  direct_executor.py  document_parser.py  dual_execution_orchestrator.py  execution_models.py  execution_monitor.py  execution_router.py  execution_verifier.py  execution_verifier_old.py  intent_classifier.py  json_backend.py  learn_cli.py  llm_client.py  logging_config.py  memory.py  memory_models.py  memory_reference_resolver.py  memory_search.py  orchestrator.py  persistent_memory.py  prompt_injector.py  reasoning.py  response_generator.py  sandbox_execution_system.py  sqlite_backend.py  storage_backend.py  test_case_generator.py  tool_teaching.py  (+1 more)
src/jarvis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/spectral/: __init__.py  app.py  chat.py  cli.py  code_saver.py  direct_executor.py  execution_models.py  execution_router.py  generation_events.py  gui_test_generator.py  intent_classifier.py  process_controller.py  research_intent_handler.py  sandbox_execution_system.py  sandbox_manager.py
tests/: test_action_executor.py  test_adaptive_fixing.py  test_chat.py  test_cli.py  test_code_saver.py  test_dual_execution_orchestrator.py  test_execution_monitor_windows.py  test_execution_router.py  test_execution_verifier.py  test_reasoning_tool_enforcement.py  test_sandbox.py
tests/controller/: __init__.py  test_controller.py  test_step_verifier.py
tests/memory/: __init__.py  test_rag.py
tests/reasoning/: test_reasoning.py
tests/research/: __init__.py  run_quick_validation.py  test_extractor.py  test_knowledge_pack.py  test_search_providers.py
tests/system_actions/: test_orchestrator_integration.py  test_system_actions.py
(+39 files in other folders)
